--- a/index2.html
+++ b/index2.html
@@ -47,19 +47,11 @@
                         <strong><span>Computer</span> Science</strong>
                     </a>
 
-                    <div class="d-lg-none">
-                        <a href="sign-in.html"
-                            class="bi-person custom-icon me-3"></a>
-
-                        <a href="product-detail.html"
-                            class="bi-bag custom-icon"></a>
-                    </div>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item">
-                                <a class="nav-link"
-                                    href="index.html">หน้าแรก</a>
+                                <a class="nav-link active"  href="index.html">หน้าหลัก</a>
                             </li>
 
                             <li class="nav-item">
