--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#">เอกสาร</a>
+                                <a class="nav-link" href="#News">ข่าวสาร</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#">ติดต่อเรา</a>
+                                <a class="nav-link" href="#contracts">ติดต่อเรา</a>
                             </li>
                         </ul>
                     </div>
@@ -104,7 +104,7 @@
                         <div class="col-md-4" data-aos="zoom-in">
                             <div class="service h-100">
                                 <div class="service-img">
-                                    <!-- ถ้ารูปยังไม่มี ก็ใส่ bg สีแทน -->
+                                    
                                     <img src="images/images.png" alt
                                         style="width: 100%; height: 100px; object-fit: cover;">
                                 </div>
@@ -143,7 +143,7 @@
             </div>
         </section>
 
-        <section class="testimonial section-padding">
+        <section id="News" class="testimonial section-padding">
             <div class="container">
                 <div class="row">
 
@@ -197,7 +197,7 @@
             </div>
         </section>
 
-        <footer class="py-4">
+        <footer id="contracts" class="py-4">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
