--- a/index3.html
+++ b/index3.html
@@ -62,7 +62,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#">เอกสาร</a>
+                                <a class="nav-link" href="#">ข่าวสาร</a>
                             </li>
 
                             <li class="nav-item">
@@ -73,7 +73,7 @@
                 </div>
             </nav>
 
-            <section class="py-5 text-center container">
+            <section class="py-lg-5 text-center container mt-lg-5">
                 <div class="row py-lg-5">
                     <div class="col-lg-6 col-md-8 mx-auto">
                         <h1 class="fw-light">ประวัติส่วนตัว</h1>
