--- a/index2.html
+++ b/index2.html
@@ -51,7 +51,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item">
-                                <a class="nav-link active"  href="index.html">หน้าหลัก</a>
+                                <a class="nav-link"  href="index.html">หน้าแรก</a>
                             </li>
 
                             <li class="nav-item">
@@ -60,7 +60,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#">เอกสาร</a>
+                                <a class="nav-link" href="#">ข่าวสาร</a>
                             </li>
 
                             <li class="nav-item">
@@ -71,7 +71,7 @@
                 </div>
             </nav>
 
-            <section class="py-5 text-center container">
+            <section class="py-lg-5 text-center container mt-lg-5">
                 <div class="row py-lg-5">
                     <div class="col-lg-6 col-md-8 mx-auto">
                         <h1 class="fw-light">ทำเนียบรุ่น</h1>
